fix(ZNTA-2143) alignment of project name and textfields on glossary page, colours of buttons on settings page, width of search box on explore page improved

--- a/server/zanata-frontend/src/frontend/app/containers/Explore/index.less
+++ b/server/zanata-frontend/src/frontend/app/containers/Explore/index.less
@@ -44,7 +44,7 @@
   font-size: 1.1rem;
   font-style: inherit;
   outline: 0;
-  width: 80%;
+  width: 90%;
   padding-left: @spacing-hr;
   padding-right: @spacing-hr;
   margin-left: -1.5rem;
