--- a/server/zanata-frontend/src/frontend/app/containers/Glossary/index.less
+++ b/server/zanata-frontend/src/frontend/app/containers/Glossary/index.less
@@ -99,6 +99,14 @@ table.glossaryEntry {
   vertical-align: sub;
 }
 
+.languageSelect .iconGlossary-neutral {
+  vertical-align: sub;
+}
+
+.iconLanguage-neutral {
+  vertical-align: text-top;
+}
+
 #deleteEntries .tooltip-inner {
   max-width: 14rem;
 }
@@ -283,6 +291,7 @@ td.languageSelect .selectClear {
 .projectLink {
   display: inline-block;
   margin-left: @spacing-rh;
+  vertical-align: text-bottom;
 }
 
 // @screen-xs variable depreciated
