--- a/server/zanata-frontend/src/frontend/app/styles/gwt.less
+++ b/server/zanata-frontend/src/frontend/app/styles/gwt.less
@@ -38,7 +38,10 @@
   }
   .button--group input[type=radio]:checked+.button--Off, .button--group input[type=radio]:checked+.button--Off:hover {
     background-color: #546677 !important;
-    color: #f7f7f7;
+    color: #f7f7f7 !important;
+  }
+  .button--group input[type=radio]:checked+.button--danger, .button--group input[type=radio]:checked+.button--danger:hover {
+    color: #f7f7f7 !important;
   }
   label {
     color: #546677 !important;
