--- a/server/zanata-frontend/src/frontend/app/styles/style.less
+++ b/server/zanata-frontend/src/frontend/app/styles/style.less
@@ -527,6 +527,7 @@ input.textInput::placeholder, textarea.textInput::placeholder {
   padding: @spacing-re @spacing-rh;
   width: 100%;
   margin-left: @spacing-rh;
+  vertical-align: middle;
 }
 
 
